Fix bug #8314: sane syslog output to the WinNT event log.

Big fat note: if you're building from a .dsp, you need to replicate
the custom build step that uses MC to generate the message catalog

To make use of this fix, you need to register the event source; running "nmake
install" will handle this for you (if you also build the win32std extension
from pecl).

I'll arrange with Phil to have the installer handle this registration too.